--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,6 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/js/code.js": "/js/code.js",
+    "/js/dashboard.js": "/js/dashboard.js",
     "/js/edit_code.js": "/js/edit_code.js"
 }
